substrate/primitives/api/test/tests/ui/missing_versioned_method.stderr
error[E0046]: not all trait items implemented, missing: `test3`
  --> tests/ui/missing_versioned_method.rs:35:2
   |
29 |         fn test3();
   |         ----------- `test3` from trait
...
35 |     impl self::Api<Block> for Runtime {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `test3` in implementation

error[E0053]: method `execute_block` has an incompatible type for trait
  --> tests/ui/missing_versioned_method.rs:44:23
   |
44 |         fn execute_block(_: Block) {
   |                             ^^^^^ expected `LazyBlock<Header<u64, BlakeTwo256>, ...>`, found `Block<Header<u64, BlakeTwo256>, ...>`
   |
   = note: expected signature `fn(sp_runtime::generic::LazyBlock<sp_runtime::generic::Header<u64, BlakeTwo256>, UncheckedExtrinsic<CryptoBytes<32, Sr25519PublicTag>, RuntimeCall, CryptoBytes<64, (SignatureTag, Sr25519Tag)>, ((frame_system::extensions::check_nonce::CheckNonce<substrate_test_runtime_client::substrate_test_runtime::Runtime>, frame_system::extensions::check_weight::CheckWeight<substrate_test_runtime_client::substrate_test_runtime::Runtime>), CheckSubstrateCall, frame_metadata_hash_extension::CheckMetadataHash<substrate_test_runtime_client::substrate_test_runtime::Runtime>, frame_system::extensions::weight_reclaim::WeightReclaim<substrate_test_runtime_client::substrate_test_runtime::Runtime>), 16777216>>)`
              found signature `fn(sp_runtime::generic::Block<sp_runtime::generic::Header<u64, BlakeTwo256>, UncheckedExtrinsic<CryptoBytes<32, Sr25519PublicTag>, RuntimeCall, CryptoBytes<64, (SignatureTag, Sr25519Tag)>, ((frame_system::extensions::check_nonce::CheckNonce<substrate_test_runtime_client::substrate_test_runtime::Runtime>, frame_system::extensions::check_weight::CheckWeight<substrate_test_runtime_client::substrate_test_runtime::Runtime>), CheckSubstrateCall, frame_metadata_hash_extension::CheckMetadataHash<substrate_test_runtime_client::substrate_test_runtime::Runtime>, frame_system::extensions::weight_reclaim::WeightReclaim<substrate_test_runtime_client::substrate_test_runtime::Runtime>), 16777216>>)`
help: change the parameter type to match the trait
   |
44 -         fn execute_block(_: Block) {
44 +         fn execute_block(_: sp_runtime::generic::LazyBlock<sp_runtime::generic::Header<u64, BlakeTwo256>, UncheckedExtrinsic<CryptoBytes<32, Sr25519PublicTag>, RuntimeCall, CryptoBytes<64, (SignatureTag, Sr25519Tag)>, ((frame_system::extensions::check_nonce::CheckNonce<substrate_test_runtime_client::substrate_test_runtime::Runtime>, frame_system::extensions::check_weight::CheckWeight<substrate_test_runtime_client::substrate_test_runtime::Runtime>), CheckSubstrateCall, frame_metadata_hash_extension::CheckMetadataHash<substrate_test_runtime_client::substrate_test_runtime::Runtime>, frame_system::extensions::weight_reclaim::WeightReclaim<substrate_test_runtime_client::substrate_test_runtime::Runtime>), 16777216>>) {
   |

error[E0308]: mismatched types
  --> tests/ui/missing_versioned_method.rs:44:20
   |
33 | / sp_api::impl_runtime_apis! {
34 | |     #[api_version(3)]
35 | |     impl self::Api<Block> for Runtime {
36 | |         fn test1() {}
...  |
44 | |         fn execute_block(_: Block) {
   | |                          ^ expected `LazyBlock<Header<u64, BlakeTwo256>, ...>`, found `Block<Header<u64, BlakeTwo256>, ...>`
...  |
51 | | }
   | |_- arguments to this function are incorrect
   |
   = note: expected struct `LazyBlock<Header<u64, BlakeTwo256>, ...>`
              found struct `Block<Header<u64, BlakeTwo256>, ...>`
note: associated function defined here
  --> $WORKSPACE/substrate/primitives/api/src/lib.rs
   |
   |         fn execute_block(block: Block::LazyBlock);
   |            ^^^^^^^^^^^^^
   = note: consider using `--verbose` to print the full type name to the console
